Folder structure updated

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasty Heaven</title>
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
-    
+    <h1>Tasty Heaven</h1>
+
+    <script src="./javascript/home.js"></script>
 </body>
 </html>
