navbar added proper

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservation Page</title>
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./../css/home.css">
 </head>
 <body>
     <div class="container">
         <div class="nav-div">          
-                <img src="./icons/home-page-icon/th-logo.png" class="nav-logo">
+                <img src="./../icons/home-page-icon/th-logo.png" class="nav-logo">
                 <ul class="nav-links">
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./pages/menu.html">MENU</a></li>
-                    <li><a href="./pages/reservation.html">RESERVATIONS</a></li>
-                    <li><a href="./pages/innovation.html">CONTACT US</a></li>
-                    <li><a href="./pages/about.html">ABOUT US</a></li>
-                    <a href="./pages/sign-up.html"><button class="nav-login">SIGN UP</button></a>
+                    <li><a href="./../index.html">Home</a></li>
+                    <li><a href="./../pages/menu.html">MENU</a></li>
+                    <li><a href="./../pages/reservation.html">RESERVATIONS</a></li>
+                    <li><a href="./../pages/innovation.html">CONTACT US</a></li>
+                    <li><a href="./../pages/about.html">ABOUT US</a></li>
+                    <a href="./../pages/sign-up.html"><button class="nav-login">SIGN UP</button></a>
                 </ul>
         </div>
     </div>
     <hr class="line">
-    <script src="./javascript/home.js"></script>
+    <script src="./../javascript/home.js"></script>
 </body>
 </html>
