--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -11,7 +11,7 @@
         <div class="nav-div">          
                 <img src="./../icons/home-page-icon/th-logo.png" class="nav-logo">
                 <ul class="nav-links">
-                    <li><a href="./../index.html">Home</a></li>
+                    <li><a href="./../index.html">HOME</a></li>
                     <li><a href="./../pages/menu.html">MENU</a></li>
                     <li><a href="./../pages/reservation.html">RESERVATIONS</a></li>
                     <li><a href="./../pages/innovation.html">CONTACT US</a></li>
