--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./pages/menu.html">MENU</a></li>
                     <li><a href="./pages/reservation.html">RESERVATIONS</a></li>
-                    <li><a href="./pages/innovation.html">CONTACT US</a></li>
+                    <li><a href="./pages/innovation.html">CONYACT US</a></li>
                     <li><a href="./pages/about.html">ABOUT US</a></li>
                     <a href="./pages/sign-up.html"><button class="nav-login">SIGN UP</button></a>
                 </ul>
