--- a/pages/login.html
+++ b/pages/login.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login page</title>
-    <link rel="stylesheet" href="./css/login.css">
-    <style>
-
-    </style>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="./../css/login.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
 
-<script src="./javascript/login.js">
+    <div class="wrapper">
+        <form action="">
+            <h1>Login</h1>
+            <div class="input-box">
+                <input type="text" placeholder="Username" required>
+                <i class='bx bxs-user'></i>
+            </div>
 
-</script>
+            <div class="input-box">
+                <input type="password" placeholder="password" required>
+                <i class='bx bxs-lock-alt'></i>
+
+            </div>
+            <div class="remember-forgot">
+                <label><input type="checkbox"> Remenber Me </label>
+                <a href="#"> Forgot password? </a>
+
+            </div>
+            <button type="submit" class="btn"><a href="./menu.html">Login</a></button>
+
+            <div class="register-link">
+                <p>Don't have an account? <a href="./sign-up.html">Sign-Up</a></p>
+            </div>
+
+        </form>
+    </div>
+
 </body>
+
 </html>
