--- a/pages/login.html
+++ b/pages/login.html
@@ -12,15 +12,15 @@
 <body>
 
     <div class="wrapper">
-        <form action="">
+        <form  id="loginForm">
             <h1>Login</h1>
             <div class="input-box">
-                <input type="text" placeholder="Username" required>
+                <input type="text" name="Username" placeholder="Username" id="username" required>
                 <i class='bx bxs-user'></i>
             </div>
 
             <div class="input-box">
-                <input type="password" placeholder="password" required>
+                <input type="password" name="password" placeholder="password" id="password" required>
                 <i class='bx bxs-lock-alt'></i>
 
             </div>
@@ -30,6 +30,8 @@
 
             </div>
             <button type="submit" class="btn"><a href="./menu.html">Login</a></button>
+            <p class="error-message" id="errorMessage"></p>
+
 
             <div class="register-link">
                 <p>Don't have an account? <a href="./sign-up.html">Sign-Up</a></p>
