changes in javascript

--- a/pages/login.html
+++ b/pages/login.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="wrapper">
-        <form  id="loginForm">
+        <form  id="login-form">
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" name="Username" placeholder="Username" id="username" required>
@@ -29,7 +29,7 @@
                 <a href="#"> Forgot password? </a>
 
             </div>
-            <button type="submit" class="btn"><a href="./menu.html">Login</a></button>
+            <button type="submit" class="btn"><a href="">Login</a></button>
             <p class="error-message" id="errorMessage"></p>
 
 
@@ -39,7 +39,10 @@
 
         </form>
     </div>
+    <script src="./../javascript/login.js">
 
+    </script>
+    
 </body>
 
 </html>
