--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -3,16 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-up page</title>
-    <link rel="stylesheet" href="./css/sign-up.css">
-    <style>
-
-    </style>
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="./../css/sign-up.css">
 </head>
 <body>
+    <div class="container">
+        <h2>Sign Up</h2>
+        <form id="registrationForm" onsubmit="return validateForm()">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" placeholder="username" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" placeholder="password" required>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">Confirm Password:</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="confirm Password" required>
+            </div>
+            <button type="submit">Sign-Up</button>
 
-<script src="./javascript/sign-up.js">
+            <div class="register-link">
+                <p>Already have an account? <a href="./login.html">Log-in</a></p>
+            </div>
 
-</script>
+        </form>
+        <p id="error-message" style="color:tomato;"></p>
+    </div>
+
+    <script src="./../javascript/sign-up.js"></script>
 </body>
 </html>
