--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
         <div class="nav-div">          
                 <img src="./icons/home-page-icon/th-logo.png" class="nav-logo">
                 <ul class="nav-links">
-                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index.html">HOME</a></li>
                     <li><a href="./pages/menu.html">MENU</a></li>
                     <li><a href="./pages/reservation.html">RESERVATIONS</a></li>
-                    <li><a href="./pages/innovation.html">CONYACT US</a></li>
-                    <li><a href="./pages/about.html">ABOUT US</a></li>
+                    <li><a href="./pages/innovation.html">CONTACT US</a></li>
+                    <li><a href="./pages/about_us.html">ABOUT US</a></li>
+                    <a href="./pages/login.html"><button class="nav-login">LOGIN</button></a>
                     <a href="./pages/sign-up.html"><button class="nav-login">SIGN UP</button></a>
                 </ul>
         </div>
     </div>
     <hr class="line">
+    
+    
+
+
+
+
+
     <script src="./javascript/home.js"></script>
 </body>
 </html>
