--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         <div>Heaven</div>
     </div>
 
+    <div class="menu-container">
+        <img src="./images/home-page/indian food.jpg" alt="indian food" class="indian-food">
+        <div class="paragraph">
+            <h1 class="card-title">Our menus</h1>
+            <p class="card-info">The OG is where culinary innovation meets the timeless charm of breakfast and lunch classics. Our menu, a treasure trove of gourmet pancakes, artisanal breakfast cocktails, and the best mimosas in Denver, promises an unrivaled dining experience.</p>
+            
+            <p class="card-info">Savor the flavors of Denver from decadent French toast to savory benedicts, each dish at The OG is crafted to perfection, making us the go-to spot for weekend brunch in Denver. Whether you're indulging in a family-friendly brunch or seeking the perfect brunch spot for a lazy Sunday, The OG's unique menu caters to all.</p>
+            <button class="menu-btn">view menus</button>
+        </div>
+    </div>
     
 
 
