--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
             <button class="menu-btn">view menus</button>
         </div>
     </div>
+    <p class="card-info " id="para">Welcome to The Tasty Heaven, nestled in the vibrant heart of McGregor Square, a stone's throw away from the iconic Coors Field. As one of Denver's top brunch destinations we're delighted to offer a unique twist on the classics and innovative dishes, perfectly paired with our signature mimosas and local coffee.</p>
     
+    <div class="card">
+        <img src="./images/home-page/misal-pav.jpg" alt="misla pav" class="card-img">
+        <div class="card-body">
+            <h1 class="card-title"> Misal Pav</h1>
+            <p class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ad laborum molestias cum officiis commodi quisquam, repudiandae a quod error minus sapiente ducimus itaque explicabo nisi at deserunt expedita iure.</p>
+            <button class="card-btn">See More</button>
+        </div>
+    </div>
 
 
 
