--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -26,10 +26,10 @@
                 <label for="confirmPassword">Confirm Password:</label>
                 <input type="password" id="confirmPassword" name="confirmPassword" placeholder="confirm Password" required>
             </div>
-            <button type="submit">Sign-Up</button>
+            <button type="submit"> Sign-Up</button>
 
             <div class="register-link">
-                <p>Already have an account? <a href="./login.html">Log-in</a></p>
+            <p>Already have an account?<a href="login.html">Log-in</a></p>
             </div>
 
         </form>
