added more cards

--- a/index.html
+++ b/index.html
@@ -42,13 +42,31 @@
     <p class="card-info " id="para">Welcome to The Tasty Heaven, nestled in the vibrant heart of McGregor Square, a stone's throw away from the iconic Coors Field. As one of Denver's top brunch destinations we're delighted to offer a unique twist on the classics and innovative dishes, perfectly paired with our signature mimosas and local coffee.</p>
     
     <h3 class="heading">Most Rated Orders</h3>
-    
-    <div class="card">
-        <img src="./images/home-page/misal-pav.jpg" alt="misla pav" class="card-img">
-        <div class="card-body">
-            <h1 class="card-title"> Misal Pav</h1>
-            <p class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ad laborum molestias cum officiis commodi quisquam, repudiandae a quod error minus sapiente ducimus itaque explicabo nisi at deserunt expedita iure.</p>
-            <button class="card-btn">See More</button>
+
+    <div class="card-box">
+        <div class="card">
+            <img src="./images/home-page/misal-pav.jpg" alt="misla pav" class="card-img">
+            <div class="card-body">
+                <h1 class="card-title"> Misal Pav</h1>
+                <p class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ad laborum molestias cum officiis commodi quisquam, repudiandae a quod error minus sapiente ducimus itaque explicabo nisi at deserunt expedita iure.</p>
+                <button class="card-btn">See More</button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./images/home-page/khaman-dhokla.jpg" alt="misla pav" class="card-img">
+            <div class="card-body">
+                <h1 class="card-title"> Misal Pav</h1>
+                <p class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ad laborum molestias cum officiis commodi quisquam, repudiandae a quod error minus sapiente ducimus itaque explicabo nisi at deserunt expedita iure.</p>
+                <button class="card-btn">See More</button>
+            </div>
+        </div>
+        <div class="card">
+            <img src="./images/home-page/cholle-bhature2.jpeg" alt="misla pav" class="card-img">
+            <div class="card-body">
+                <h1 class="card-title"> Misal Pav</h1>
+                <p class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ad laborum molestias cum officiis commodi quisquam, repudiandae a quod error minus sapiente ducimus itaque explicabo nisi at deserunt expedita iure.</p>
+                <button class="card-btn">See More</button>
+            </div>
         </div>
     </div>
 
