added more information

--- a/index.html
+++ b/index.html
@@ -70,7 +70,18 @@
         </div>
     </div>
 
-    
+    <div class="menu-container">
+        <div class="paragraph2">
+            <h1 class="card-title">Happenings</h1>
+            <p class="card-info">Stay tuned to our website and social media for the latest happenings and exclusive events at The tasty heaven, the heart of Denver's dynamic brunch and dining scene. Indulge in our themed brunches, relish our monthly specials, and join us in giving back to the community. There’s always something new and exciting to look forward to.</p>
+            
+            <p class="card-info">Whether you’re a local foodie or a visitor exploring the wonders of Denver, our doors are always open, inviting you to a place where every brunch is not just a meal, but an OG experience. </p>
+
+            <p class="card-info">Don’t miss out – book your table today and follow us on Instagram for daily inspirations and surprises!</p>
+            <button class="menu-btn">view happenings</button>
+        </div>
+        <img src="./images/home-page/598610149-From-the-Hip-Photo.avif" alt="img" class="happenings-img">
+    </div>
 
 
 
