--- a/pages/punjabi_food.html
+++ b/pages/punjabi_food.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="../css/punjabifood.css">
 </head>
 <body class="bg-yellow-100">
+    <div class="container">
+        <div class="nav-div">          
+                <img src="../icons/home-page-icon/th-logo.png" class="nav-logo">
+                <ul class="nav-links">
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./pages/menu.html">MENU</a></li>
+                    <li><a href="./pages/reservation.html">RESERVATIONS</a></li>
+                    <li><a href="./pages/innovation.html">CONTACT US</a></li>
+                    <li><a href="./pages/about_us.html">ABOUT US</a></li>
+                    <a href="./pages/login.html"><button class="nav-login">LOGIN</button></a>
+                    <a href="./pages/sign-up.html"><button class="nav-sign">SIGN UP</button></a>
+                </ul>
+        </div>
+    </div>
+    
+</div>
     <div class="container mx-auto p-6">
         <h1 class="text-4xl font-bold text-center text-red-600">🍛 Punjabi Food Menu - ਪੰਜਾਬੀ ਖਾਣਾ ਮੇਨੂ 🍛</h1>
 
