header tag is use

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -21,6 +21,12 @@
         </div>
     </div>
     <hr class="line">
+
+    <header>
+        
+    </header>
+
+
     <script src="./../javascript/home.js"></script>
 </body>
 </html>
