--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -23,7 +23,9 @@
     <hr class="line">
 
     <header>
-        
+        <div>
+            <h1>Book Your Table</h1>
+        </div>
     </header>
 
 
