--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -25,6 +25,7 @@
     <header>
         <div>
             <h1>Book Your Table</h1>
+            <p>Reserve your table at Tasty Haven for a memorable dining experience.</p>
         </div>
     </header>
 
