--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -23,7 +23,7 @@
     <hr class="line">
 
     <header>
-        <div>
+        <div class="header-container">
             <h1>Book Your Table</h1>
             <p>Reserve your table at Tasty Haven for a memorable dining experience.</p>
         </div>
