--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservation Page</title>
-    <link rel="stylesheet" href="./../css/home.css">
+    <link rel="stylesheet" href="./../css/reservation.css">
 </head>
 <body>
     <div class="container">
@@ -15,8 +15,9 @@
                     <li><a href="./../pages/menu.html">MENU</a></li>
                     <li><a href="./../pages/reservation.html">RESERVATIONS</a></li>
                     <li><a href="./../pages/innovation.html">CONTACT US</a></li>
-                    <li><a href="./../pages/about.html">ABOUT US</a></li>
-                    <a href="./../pages/sign-up.html"><button class="nav-login">SIGN UP</button></a>
+                    <li><a href="./../pages/about_us.html">ABOUT US</a></li>
+                    <a href="./../pages/login.html"><button class="nav-login">LOGIN</button></a>
+                    <a href="./../pages/sign-up.html"><button class="nav-sign">SIGN UP</button></a>
                 </ul>
         </div>
     </div>
@@ -29,7 +30,5 @@
         </div>
     </header>
 
-
-    <script src="./../javascript/home.js"></script>
 </body>
 </html>
