--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tasty Heaven</title>
+    <link rel="stylesheet" href="./../css/home.css">
 </head>
 <body>
-    <h1>Maharashtrian Food</h1>
+    <div class="container">
+        <div class="nav-div">          
+                <img src="./../icons/home-page-icon/th-logo.png" class="nav-logo">
+                <ul class="nav-links">
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./pages/menu.html">MENU</a></li>
+                    <li><a href="./pages/reservation.html">RESERVATIONS</a></li>
+                    <li><a href="./pages/innovation.html">CONTACT US</a></li>
+                    <li><a href="./pages/about_us.html">ABOUT US</a></li>
+                    <a href="./pages/login.html"><button class="nav-login">LOGIN</button></a>
+                    <a href="./pages/sign-up.html"><button class="nav-sign">SIGN UP</button></a>
+                </ul>
+        </div>
+    </div>
+    <hr class="line">
 </body>
 </html>
