interior images path added

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -33,7 +33,10 @@
     <section>
         <h2>Interior Table</h2>
         <div>
-            
+            <img src="./../images/reservation-page/interior-image1.jpg" alt="Interior Table 1">
+            <img src="./../images/reservation-page/interior-image2.jpg" alt="Interior Table 2">
+            <img src="./../images/reservation-page/interior-image3.jpg" alt="Interior Table 3">
+            <img src="./../images/reservation-page/interior-image4.jpg" alt="Interior Table 4">
         </div>
     </section>
 </body>
