interior table section completed

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -30,9 +30,9 @@
         </div>
     </header>
 
-    <section>
+    <section class="table-section">
         <h2>Interior Table</h2>
-        <div>
+        <div class="table-images">
             <img src="./../images/reservation-page/interior-image1.jpg" alt="Interior Table 1">
             <img src="./../images/reservation-page/interior-image2.jpg" alt="Interior Table 2">
             <img src="./../images/reservation-page/interior-image3.jpg" alt="Interior Table 3">
