section tag open

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -39,5 +39,9 @@
             <img src="./../images/reservation-page/interior-image4.jpg" alt="Interior Table 4">
         </div>
     </section>
+
+    <section>
+        
+    </section>
 </body>
 </html>
