exterior table section completed

--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -40,9 +40,9 @@
         </div>
     </section>
 
-    <section>
+    <section class="table-section">
         <h2>Exterior Table</h2>
-        <div>
+        <div class="table-images">
             <img src="./../images/reservation-page/exterior-img1.jpg" alt="Exterior Table 1">
             <img src="./../images/reservation-page/exterior-img2.jpg" alt="Exterior Table 2">
             <img src="./../images/reservation-page/exterior-img3.jpg" alt="Exterior Table 3">
