--- a/pages/payment.html
+++ b/pages/payment.html
@@ -66,7 +66,7 @@
         }
         .btn {
             width: 100%;
-            background: #fb641b;
+            background: #454ddb;
             color: white;
             padding: 12px;
             border: none;
@@ -76,7 +76,7 @@
             transition: 0.3s;
         }
         .btn:hover {
-            background: #d35400;
+            background: #484deb;
         }
         .payment-option {
             padding: 15px;
