div section added

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -6,6 +6,7 @@
     <title>Tasty Heaven</title>
     <link rel="stylesheet" href="./../css/home.css">
 </head>
+
 <body>
     <div class="container">
         <div class="nav-div">          
@@ -22,5 +23,17 @@
         </div>
     </div>
     <hr class="line">
+    <section id="menu">
+        <h2> Maharashtrian Menu</h2>
+
+        <div class="menu-category">
+            <h3>Starters</h3>
+            <div class="menu-items">
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/pav-bhaji.jpg" alt="Pav Bhaji">
+                    <h4>Pav Bhaji</h4>
+                    <button onclick="addToCart('Pav Bhaji')">Add to Cart</button>
+                </div>
+    
 </body>
 </html>
