starter food added

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -34,6 +34,16 @@
                     <h4>Pav Bhaji</h4>
                     <button onclick="addToCart('Pav Bhaji')">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/vada-pav.jpg" alt="Vada Pav">
+                    <h4>Vada Pav</h4>
+                    <button onclick="addToCart('Vada Pav')">Add to Cart</button>
+                </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/sabudana-khichdi.jpg" alt="Sabudana Khichdi">
+                    <h4>Sabudana-Khichdi</h4>
+                    <button onclick="addToCart('Sabudana Khichdi')">Add to Cart</button>
+                </div>
     
 </body>
 </html>
