images one line completed

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -47,6 +47,11 @@
                     <h4>Sabudana-Khichdi</h4>
                     <button onclick="addToCart('Sabudana Khichdi')">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/misal-pav.webp" alt="misal-pav">
+                    <h4>Misal-Pav</h4>
+                    <button onclick="addToCart('Misal-Pav')">Add to Cart</button>
+                </div>
     
 </body>
 </html>
