two starter added

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -52,6 +52,16 @@
                     <h4>Misal-Pav</h4>
                     <button onclick="addToCart('Misal-Pav')">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/pani-puri.jpg" alt="pani-puri">
+                    <h4>Pani-Puri</h4>
+                    <button onclick="addToCart('pani-puri')">Add to Cart</button>
+                </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/poha-tea.jpg" alt="poha-tea">
+                    <h4>Poha-Tea</h4>
+                    <button onclick="addToCart('poha-tea')">Add to Cart</button>
+                </div>
     
 </body>
 </html>
