starter section completed

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -62,6 +62,18 @@
                     <h4>Poha-Tea</h4>
                     <button onclick="addToCart('poha-tea')">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/upit.webp" alt="upit">
+                    <h4>Upit</h4>
+                    <button onclick="addToCart('upit')">Add to Cart</button>
+                </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/bhji.jpg" alt="bhji">
+                    <h4>Bhji</h4>
+                    <button onclick="addToCart('bhji')">Add to Cart</button>
+                </div>
+            </div>
+        </div>
     
 </body>
 </html>
