Main course category is added

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -74,6 +74,9 @@
                 </div>
             </div>
         </div>
+        <div class="menu-category">
+            <h3>Main Course</h3>
+            <div class="menu-items">
     
 </body>
 </html>
