main course image added

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -77,6 +77,11 @@
         <div class="menu-category">
             <h3>Main Course</h3>
             <div class="menu-items">
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/pithal-bhakari.jpg" alt="pithal-bhakari">
+                    <h4>Pithal-Bhakari</h4>
+                    <button onclick="addToCart('pithal-bhakari')">Add to Cart</button>
+                </div>
     
 </body>
 </html>
