main course section food added

--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -82,6 +82,16 @@
                     <h4>Pithal-Bhakari</h4>
                     <button onclick="addToCart('pithal-bhakari')">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/puran-poli.jpg" alt="puran-poli">
+                    <h4>Puran-Poli</h4>
+                    <button onclick="addToCart('puran-poli')">Add to Cart</button>
+                </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/thali-pitha.webp" alt="thali-pitha">
+                    <h4>Thali-Pitha</h4>
+                    <button onclick="addToCart('thali-pitha')">Add to Cart</button>
+                </div>
     
 </body>
 </html>
