--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -92,6 +92,13 @@
                     <h4>Thali-Pitha</h4>
                     <button onclick="addToCart('thali-pitha')">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/puri-bhaji.jpg" alt="puri-bhaji">
+                    <h4>Puri-Bhaji</h4>
+                    <button onclick="addToCart('puri-bhaji')">Add to Cart</button>
+                </div>
+            </div>
+        </div>
     
 </body>
 </html>
