--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -99,6 +99,10 @@
                 </div>
             </div>
         </div>
+        <div class="menu-category">
+            <h3>Desserts</h3>
+            <div class="menu-items">
+                
     
 </body>
 </html>
