--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -107,6 +107,16 @@
                     <h4>GulabJamun</h4>
                     <button onclick="addToCart('GulabJamun')">Add to Cart</button>
                 </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/jilebi.png" alt="jilebi">
+                    <h4>Jilebi</h4>
+                    <button onclick="addToCart('Jilebi')">Add to Cart</button>
+                </div>
+                <div class="menu-item">
+                    <img src="./../images/maharashtrian-food/ras-malai.png" alt="ras-malai">
+                    <h4>RasMalai</h4>
+                    <button onclick="addToCart('RasMalai')">Add to Cart</button>
+                </div>
 
     
 </body>
