--- a/pages/maharashtrian-food.html
+++ b/pages/maharashtrian-food.html
@@ -124,6 +124,14 @@
                 </div>
             </div>
         </div>
+        <div id="cart-container" style="display: none;">
+            <h3>Your Cart</h3>
+            <ul id="cart-list">
+            </ul>
+            <button onclick="checkout()">Proceed to Checkout</button>
+        </div>
+    </section>
+        
 
     
 </body>
